@@ -172,7 +172,6 @@ common.pagination.previous=Vorherige {0}
 common.pagination.results=Ergebnisse je Seite
 common.save=Speichern
 common.sectionedit=Bearbeiten
-common.sitename=JAMWiki
 common.topic=Thema
 common.undelete=L\u00F6schen zur\u00FCcknehmen
 common.update=\u00C4ndern
