@@ -172,7 +172,6 @@ common.pagination.previous=\u524D\u306E {0}\u4EF6
 common.pagination.results=\u30DA\u30FC\u30B8\u3042\u305F\u308A\u306E\u4EF6\u6570
 common.save=\u4FDD\u5B58
 common.sectionedit=\u7DE8\u96C6
-common.sitename=JAMWiki
 common.topic=\u8A18\u4E8B
 common.undelete=\u524A\u9664\u306E\u53D6\u308A\u6D88\u3057
 common.update=\u66F4\u65B0
