@@ -172,7 +172,6 @@ common.pagination.previous={0} Anterior
 common.pagination.results=Resultados por p\u00E1gina
 common.save=Salvar
 common.sectionedit=Editar
-common.sitename=JAMWiki
 common.topic=T\u00F3pico
 common.undelete=Undelete
 common.update=Atualizar
