@@ -172,7 +172,6 @@ common.pagination.previous=Predch\u00E1dzaj\u00FAci {0}
 common.pagination.results=Po\u010Det v\u00FDsledkov na stranu
 common.save=Ulo\u017Ei\u0165
 common.sectionedit=Upravi\u0165
-common.sitename=JAMWiki
 common.topic=T\u00E9ma
 common.undelete=Obnovi\u0165 vymazan\u00E9
 common.update=Aktulizacia
